Fix screen overflow bug

--- a/stylesheets/reset.css
+++ b/stylesheets/reset.css
@@ -46,3 +46,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+button, button:hover, button:active, button:focus {
+	border: 0;
+	outline: 0;
+}
