--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -1,25 +1,29 @@
-// @fontface {
-//   font-family: "Glacial Indifference";
-//   src: url('../media/fonts/GlacialIndifference-Regular.otf');
-// }
+@fontface {
+  font-family: "Glacial Indifference";
+  src: url('../media/fonts/GlacialIndifference-Regular.otf');
+}
 
 $background: #efefef;
 $pomodoro: #bd2640;
 $buttons: #3f6cb2;
 $settings: #a6a6a6;
-$main-font: 'Glacial Indifference', sans-serif;
+$main-font-family: 'Glacial Indifference', sans-serif;
+
+@mixin main-font {
+  font-family: $main-font-family;
+  font-weight: lighter;
+  letter-spacing: 0.1em;
+}
 
 html {
   background-color: $background;
-  box-sizing: border-box;
   font-size: 12px;
 }
 
-body {
-  height: 100vh;
-}
-
 .container {
+  box-sizing: border-box;
+  height: 100vh;
+  padding: 2% 4%;
   position: relative;
   width: 100%;
 }
@@ -28,26 +32,31 @@ body {
   align-items: center;
   border-top: 5px solid black;
   border-bottom: 5px solid black;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  height: 90%;
+  height: 100%;
   justify-content: space-around;
-  margin: 1% 2%;
 }
 
-.title h1 {
+.title {
+  @include main-font;
   color: $pomodoro;
-  font-family: $main-font;
   font-size: 6.67rem;
-  font-weight: lighter;
-  letter-spacing: 0.1em;
   text-transform: uppercase;
 }
 
-.timer h2 {
+.timer {
+  @include main-font;
   color: black;
-  font-family: $main-font;
   font-size: 10rem;
+}
+
+.buttons .play-btn {
+
+  &[name='reset'] {
+    background-image: url(../)
+  }
 }
 
 .corner {
